--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,52 +12,44 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="parent" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardViewContainer"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        app:cardCornerRadius="30dp"
-        android:layout_marginTop="100dp"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="100dp"
         android:layout_marginEnd="20dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:cardCornerRadius="30dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal"
-            android:gravity="center">
+            >
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/search_icon"
-                android:paddingStart="10dp"/>
-
-            <TextView
+            <androidx.appcompat.widget.SearchView
                 android:id="@+id/searchview"
                 android:layout_width="310dp"
                 android:layout_height="match_parent"
-                android:text="Cari Lokasi"
-                android:gravity="center_vertical"
-                android:layout_gravity="center_horizontal"
+                android:layout_gravity="center"
+                android:gravity="center"
                 android:paddingStart="10dp"
-                />
+                android:text="Cari Lokasi" />
 
             <ImageButton
                 android:id="@+id/button_setting"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/setting_button"
                 android:background="@android:color/transparent"
-                android:paddingEnd="10dp"/>
+                android:src="@drawable/setting_button"
+                android:layout_gravity="center"/>
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
