--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,17 @@
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent" />
 
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <include layout="@layout/bottom_sheet_layout" />
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
     <androidx.cardview.widget.CardView
         android:id="@+id/cardViewContainer"
         android:layout_width="match_parent"
@@ -28,8 +39,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
-            >
+            android:orientation="horizontal">
 
             <androidx.appcompat.widget.SearchView
                 android:id="@+id/searchview"
@@ -44,9 +54,9 @@
                 android:id="@+id/button_setting"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:background="@android:color/transparent"
-                android:src="@drawable/setting_button"
-                android:layout_gravity="center"/>
+                android:src="@drawable/setting_button" />
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
