--- a/app/src/main/res/layout/bottom_sheet_layout.xml
+++ b/app/src/main/res/layout/bottom_sheet_layout.xml
@@ -29,9 +29,11 @@
             android:id="@+id/close_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingStart="10dp"
             android:src="@drawable/close_icon"
-            android:visibility="invisible" />
+            tools:ignore="MissingConstraints"
+            android:importantForAccessibility="no"
+            android:visibility="invisible"
+            />
 
         <TextView
             android:id="@+id/textviewOffset"
@@ -40,8 +42,8 @@
             android:text="Informasi Bencana Terkini"
             android:textColor="@android:color/black"
             android:textSize="20sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            android:paddingStart="10dp"
+            app:layout_constraintTop_toTopOf="@id/close_icon"
             app:layout_constraintStart_toEndOf="@id/close_icon"/>
 
         <androidx.recyclerview.widget.RecyclerView
@@ -50,7 +52,9 @@
             android:layout_height="match_parent"
             android:layout_marginTop="40dp"
             app:layout_constraintTop_toBottomOf="@id/textviewOffset"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/card_news"
+            >
 
         </androidx.recyclerview.widget.RecyclerView>
 
