--- a/app/src/main/res/layout/bottom_sheet_layout.xml
+++ b/app/src/main/res/layout/bottom_sheet_layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/bottom_sheet_layout"
@@ -10,30 +10,34 @@
     app:behavior_peekHeight="250dp"
     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
 
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/arrow_up_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
-        android:src="@drawable/arrow_up" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/arrow_up_icon"
         android:layout_margin="10dp"
         android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/arrow_up_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp"
+            android:src="@drawable/arrow_up"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:importantForAccessibility="no" />
 
         <ImageView
             android:id="@+id/close_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/close_icon"
-            tools:ignore="MissingConstraints"
-            android:importantForAccessibility="no"
             android:visibility="invisible"
-            />
+            app:layout_constraintTop_toBottomOf="@id/arrow_up_icon"
+            app:layout_constraintStart_toStartOf="parent"
+            android:importantForAccessibility="no" />
 
         <TextView
             android:id="@+id/textviewOffset"
@@ -42,15 +46,15 @@
             android:text="Informasi Bencana Terkini"
             android:textColor="@android:color/black"
             android:textSize="20sp"
-            android:paddingStart="10dp"
-            app:layout_constraintTop_toTopOf="@id/close_icon"
+            android:paddingHorizontal="10dp"
+            app:layout_constraintTop_toBottomOf="@id/arrow_up_icon"
             app:layout_constraintStart_toEndOf="@id/close_icon"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/news_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="70dp"
             app:layout_constraintTop_toBottomOf="@id/textviewOffset"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:listitem="@layout/card_news"
@@ -61,4 +65,4 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-</RelativeLayout>
+</FrameLayout>
