[update] -report feature- update data presentation Reports

--- a/app/src/main/res/layout/fragment_reports.xml
+++ b/app/src/main/res/layout/fragment_reports.xml
@@ -16,33 +16,49 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-        <AutoCompleteTextView
+
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/autoCompleteTextView"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
+            android:drawableStart="@drawable/search_icon"
+            android:drawablePadding="10dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
-            android:layout_marginVertical="16dp"
-            android:hint="Silahkan Cari Daerah"
-            android:imeOptions="actionDone"
-            android:inputType="text"
-            android:minHeight="48dp"
-            android:padding="20dp"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="70dp"
+            android:paddingVertical="10dp"
+            android:paddingHorizontal="20dp"
+            app:layout_constraintEnd_toStartOf="@+id/btn_search"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="JAKARTA"
+            android:background="@drawable/bg_search_view"
+            android:inputType="text"
+            android:imeOptions="actionDone"
+            android:hint="Cari daerah .."
+            />
 
         <ImageView
-            android:id="@+id/circleComplete"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@drawable/circle_completer"
-            android:visibility="invisible"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:id="@+id/btn_search"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:background="@drawable/bg_btn_search"
+            android:src="@drawable/setting_button"
+            android:layout_marginEnd="24dp"
+            android:padding="10dp"
+            app:layout_constraintBottom_toBottomOf="@+id/autoCompleteTextView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/autoCompleteTextView" />
+
+        <ProgressBar
+            android:id="@+id/progress_circular"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@+id/maps"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-
-            />
+            tools:visibility="visible" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -81,7 +97,7 @@
                 android:layout_height="wrap_content"
                 android:importantForAccessibility="no"
                 android:src="@drawable/close_icon"
-                android:visibility="invisible"
+                android:visibility="gone"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/arrow_up_icon" />
 
@@ -91,7 +107,6 @@
                 android:layout_height="wrap_content"
                 android:paddingHorizontal="10dp"
                 android:text="Informasi Bencana Terkini"
-                android:textColor="@android:color/black"
                 android:textSize="20sp"
                 app:layout_constraintStart_toEndOf="@id/close_icon"
                 app:layout_constraintTop_toBottomOf="@id/arrow_up_icon" />
@@ -101,6 +116,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="70dp"
+                android:layout_marginBottom="50dp"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_constraintTop_toBottomOf="@id/textviewOffset"
                 tools:listitem="@layout/card_report">
