--- a/app/src/main/res/navigation/nav_host.xml
+++ b/app/src/main/res/navigation/nav_host.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/reportsFragment"
-        android:name="com.example.petabencana.ui.reports.ReportsFragment"
+        android:name="com.example.petabencana.presentation.ui.reports.ReportsFragment"
         android:label="ReportsFragment"
         tools:layout="@layout/fragment_reports"
         />
