--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="primary">#00880C</color>
+    <color name="bg_light">#FFFFFFFF</color>
+    <color name="bg_dark">#181818</color>
 </resources>
