--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -4,10 +4,10 @@
         <!-- Customize your dark theme here. -->
          <item name="colorPrimary">@color/primary</item>
         <item name="backgroundColor">@color/bg_dark</item>
-<!--        <item name="android:statusBarColor">@color/bg_dark</item>-->
+        <item name="android:statusBarColor">@color/bg_dark</item>
 
-        <item name="android:windowTranslucentStatus">false</item>
-        <item name="android:statusBarColor">@android:color/transparent</item>
-        <item name="android:windowLayoutInDisplayCutoutMode" tools:targetApi="o_mr1">shortEdges</item>
+<!--        <item name="android:windowTranslucentStatus">false</item>-->
+<!--        <item name="android:statusBarColor">@android:color/transparent</item>-->
+<!--        <item name="android:windowLayoutInDisplayCutoutMode" tools:targetApi="o_mr1">shortEdges</item>-->
     </style>
 </resources>
