--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -15,6 +15,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:title="Pengaturan"
+        app:navigationIcon="@drawable/ic_arrow_back"
         app:titleTextColor="@android:color/white"/>
 
     <com.google.android.material.switchmaterial.SwitchMaterial
