[add] -data feature- add suggestion of list data provinces

--- a/app/src/main/res/layout/fragment_reports.xml
+++ b/app/src/main/res/layout/fragment_reports.xml
@@ -17,7 +17,7 @@
             android:layout_height="match_parent" />
 
 
-        <com.google.android.material.textfield.TextInputEditText
+        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
             android:id="@+id/autoCompleteTextView"
             android:layout_width="0dp"
             android:drawableStart="@drawable/search_icon"
